--- a/Libro.tex
+++ b/Libro.tex
@@ -280,6 +280,16 @@ prerogativa dei “mostri”, diversi dalle persone comuni, diversi da noi e, ch
 di commettere azioni terribili.
 
 Questi eventi sono stati descritti nel libro L'effetto Lucifero di Philip Zimbardo, un’opera influente, ma anche controversa per via delle critiche metodologiche ricevute nel tempo\endnote{\raggedright\url{https://it.wikipedia.org/wiki/Effetto\_Lucifero\_(film)}} \endnote{\raggedright\url{https://it.wikipedia.org/wiki/The\_Experiment\_(film\_2010)}}.
+
+Un esperimento correlato fu condotto nel 1961 Stanley Milgram della Yale University si chiedeva come regimi autoritari, come quello nazista, avessero potuto spingere persone comuni a obbedire ordini disumani. Milgram crea un esperimento, dove un suo collaboratore si siederà su una finta sedia elettrica con voltaggi che vanno da 15 a 450 volt. Milgram interrogherà questa persona e ad ogni risposta errata ordinerà a dei volontari, ignari della finzione, di dare la scossa e, il voltaggio, aumenterà di volta in volta fino ad arrivare a livelli indicati sull'apparecchio come "altamente pericolosi". Se un soggetto arriva a disobbedire l'esperimento termina.
+
+Ai partecipanti viene fatta provare una carica da 45 volt per avere un paragone delle scosse che daranno. Al raggiungimento dei 300 volt la vittima/collaboratore non fornirà più alcuna risposta alle domande.
+
+Ogni volta che il partecipante avrà dei dubbi sul dare la scossa o meno, Milgram risponderà: Per favore, vada avanti.
+
+A fine esperimento sono stati intervistati i soggetti che confermarono di essere consapevoli del dolore che stavano infliggendo. 
+
+I risultati sono stati: Tutti i partecipanti arrivarono ad almeno 300V, e circa 26 su 40 (65\%) somministrarono la scarica massima di 450V. 
 \end{mdframed}
 
 \needspace{4cm}
@@ -3315,11 +3325,6 @@ La vera domanda è: che effetto ha avuto sugli altri, li ha persuasi? Sono dalla
 
 Dovremmo quindi evitare i litigi? Si, ma non le discussioni.
 
-
-
-
-
-
 \begin{mdframed}[linewidth=1pt]
 Se ti arrabbi è perché sei colpevole
 
@@ -3371,42 +3376,19 @@ Se qualcuno ci fa notare un nostro comportamento, è oro!
 All'inizio ci potrebbe fare male, ma una
 volta superata questa fase, possiamo essere grati dell'onestà e del coraggio di questa persona, che avrebbe potuto scegliere la strada più facile e non dirci nulla. 
 
-
-
-
-
-
-
-Allo stesso modo, quando saremo noi a trovarci a dover fare una critica, non attacchiamo la persona, ma solo il
-comportamento che vogliamo segnalare, in maniera oggettiva, senza commenti personali e il più circostanziato possibile,
-ad esempio: quella volta, in quella particolare occasione sei stato maleducato. Invece di dire: sei un maleducato. Se
+Per evitare di attaccare la persona, cerchiamo di circostanziare il commento in modo da renderlo specifico ad un'azione o un momento: quella volta, in quella particolare occasione sei stato maleducato. Invece di dire: sei un maleducato. Se
 si ha una richiesta invece è meglio formala in positivo, ad esempio: vorrei che tu arrivassi in orario. Invece di: Non
-arrivare più in ritardo. Non sono d'accordo con le tue idee, invece di: non capisci niente! ecc…
+arrivare più in ritardo.
 
-In generale possiamo tenere la conversazione molto semplice, se pensi di aver fatto qualcosa di male, chiedi scusa, che problema c'è a dirlo? Se le argomentazioni sono valide, ma non sei ancora convinto del tutto, puoi dire che vorresti rifletterci un po' su. Se il discorso va in una direzioni in cui non sei molto ferrato, puoi dire che non conosci abbastanza questo campo ecc…
-Per questo non mi piace tanto la modalità in cui uno dei due dice: ok, la pensiamo in modo diverso, va bene così. A volte può sembrare un altro modo di dire, io non voglio cambiare idea, ma non so come ribattere. A parte su questioni estetiche, penso che si possa sempre arrivare ad un punto nella questione, è chiaro però che se i due hanno idee diverse, uno dovrà cambiare opinione, o forse entrambi trovando una terza strada a metà.
+In generale possiamo tenere la conversazione molto semplice, se pensi di aver fatto qualcosa di male, chiedi scusa, che problema c'è a dirlo? Se le argomentazioni sono valide, ma non sei ancora convinto del tutto, puoi dire che vorresti rifletterci un po' su. Se il discorso va in una direzione in cui non sei molto competente, puoi dire che non conosci abbastanza questo campo ecc…
+Per questo mi spiace quando si arriva a dire: ok, la pensiamo in modo diverso, va bene così. A volte può sembrare un altro modo di dire, io non voglio cambiare idea. A parte su questioni estetiche, penso che si possa sempre arrivare ad un punto d'accordo nelle questioni.
 
 \subsubsection{Manipolazione}
-Se una moglie, sperimentando una nuova ricetta che non dovesse riuscire nel migliore dei modi,
-ponesse al marito la domanda: ti è piaciuta la minestra? Il marito si troverebbe davanti a due possibilità: nelle
-relazioni possiamo avere un punto di vista personale e uno relazionale. La risposta dal punto di vista personale
-dovrebbe essere “no”, mentre dal punto di vista relazionale potrebbe essere “si”. Entrambe sono risposte giuste e
-percorribili. Una risposta da manuale di psicologia potrebbe essere: la minestra non mi è piaciuta, ma ti ringrazio
-perché so con quanto sforzo e quanto amore è stata preparata. Purtroppo, nella realtà, questa risposta, probabilmente ferirebbe
-comunque il nostro partner. O ancora, alla domanda: hai voglia di portarmi in aeroporto domani mattina? Se si
-rispondesse: no, ma lo faccio volentieri, siccome so che ti fa piacere; l'altra persona porterebbe rispondere dicendo:
-accetterei solo se tu lo facessi volentieri. O ancora chiedere: perché sei arrabbiato/a con me? Questa domanda
-può fare percepire che chi la pone abbiamo già stabilito come ci sentiamo e, se la risposta dovesse essere che non siamo
-arrabbiati, verrà talvolta vista come una menzogna, un tentativo di evasione per non rispondere, inoltre, il sentirsi attribuire
-sentimenti negativi, ci fa spesso perdere la pazienza, portando, come conseguenza paradossale, il nostro
-interlocutore ad irritarsi, anche se prima era sereno. Anche se la persona non dovesse arrabbiarsi, si interrogherebbe
-sul proprio stato d'animo o di cosa ha fatto per comunicare questo stato d'animo. 
-Forse la persona che ho davanti ha visto qualcosa che io non ho notato,
-forse sono davvero arrabbiato per qualcosa? Inizio a farmi domande e a sondare ogni punto della mia mente fino a che
-non troverò qualche stato d'animo negativo, trovando magari davvero la rabbia che prima non
-c'era. Interpretare il comportamento degli altri rischia di mettere nelle loro teste idee
-sbagliate, perché non possiamo sapere cosa c'è nella testa dell'altro, siccome spesso tendiamo a generalizzare e
-interpretare allo stesso modo, a volte indipendentemente dal contesto. 
+Se una moglie, sperimentando una nuova ricetta, che non dovesse riuscire nel migliore dei modi, ponesse al marito la domanda: ti è piaciuta la minestra? Il marito si troverebbe davanti a due scelte, una personale e unA relazionale. 
+La risposta dal punto di vista personale dovrebbe essere “no”, mentre dal punto di vista relazionale potrebbe essere “si”. Entrambe sono risposte percorribili. Una risposta da manuale di psicologia potrebbe essere: la minestra non mi è piaciuta, ma ti ringrazio perché so con quanto sforzo e quanto amore è stata preparata. Purtroppo, nella realtà, questa risposta, probabilmente ferirebbe comunque il nostro partner. O ancora, alla domanda: hai voglia di portarmi in aeroporto domani mattina? Se si rispondesse: no, ma lo faccio volentieri, siccome so che ti fa piacere; l'altra persona porterebbe rispondere dicendo: accetterei solo se tu lo facessi volentieri. 
+O ancora chiedere: perché sei arrabbiato/a con me? Questa domanda può fare percepire che chi la pone abbia già stabilito come ci sentiamo e, se la risposta dovesse essere che non siamo arrabbiati, verrà talvolta vista come una menzogna, un tentativo di evasione per non rispondere, inoltre, il sentirsi attribuire sentimenti negativi, ci fa spesso perdere la pazienza, portandoci, come conseguenza paradossale, ad arrabbiarci, anche se prima eravamo sereni.
+Anche se la persona non dovesse arrabbiarsi, si interrogherebbe sul proprio stato d'animo, o di cosa ha fatto per comunicarlo. 
+Iniziando a farsi domande e sondando ogni punto della mente, fino a che non troverà qualche stato d'animo negativo. 
 
 \begin{mdframed}[linewidth=1pt]
 La profezia che si autoavvera e effetto Pigmalione
@@ -3424,120 +3406,48 @@ all'Harvard test of Inflected Acquisition. In realtà questo test non esiste e i
 \end{mdframed}
 
 Il termine manipolazione ha spesso un accezione negativa, ma non è sempre così. Quando è manipolazione e quando persuasione?
-Le manipolazioni potenzialmente dannose sono quelle che portano vantaggio a
-chi le fa, ma anche qua possiamo distinguere due tipologie. Quelli che lo fanno consapevolmente o inconsapevolmente.
-I manipolatori inconsapevoli sono la maggioranza, si aspettano che gli altri soddisfino alcuni loro desideri, che però
-vanno indovinati, in quanto non manifestati chiaramente. Nel caso l'interlocutore non dovesse
-assecondare questi bisogni, questa tipologia di manipolatori spesso ammutolisce, rimprovera, accusa, giudica, colpevolizza,
-o circuisce. Spesso il senso di colpa è un campanello d'allarme della manipolazione esterna, ma
-anche interna del nostro giudice interiore. Questo modo di comunicare risulta particolarmente prepotente e lesivo delle
-persone seppur inconsapevole. Altrettanto violente possono essere frasi come: “So di poter contare su di te per tutta
-la vita”, o “Ho deciso di iscriverti a questo corso; ti farà bene”. 
+In un certo senso, forse tutto ciò che esce dalla nostra bocca ha il fine di incontrare, sedurre e persuadere l'altro.
+Le manipolazioni potenzialmente dannose sono quelle che portano vantaggio a chi le fa, consapevolmente o inconsapevolmente. 
+I manipolatori inconsapevoli sono la maggioranza, si aspettano che gli altri soddisfino alcuni loro desideri, che però vanno indovinati, in quanto non manifestati chiaramente. Nel caso l'interlocutore non dovesse assecondare questi bisogni, questa tipologia di manipolatori spesso ammutolisce, rimprovera, accusa, giudica, colpevolizza, o ricatta. Spesso il senso di colpa è un campanello d'allarme della manipolazione. Per questo possono risultare invadenti domande come: “So di poter contare su di te per tutta la vita”, o “Ho deciso di iscriverti a questo corso; ti farà bene”. 
 
-Abbiamo poi, come accennato prima, il manipolatore benevolo che agisce per il nostro bene. Utilizza il dialogo evitando
-l'uso della forza, della coercizione, del ricatto e del senso di colpa. Ad esempio un genitore che
-chiede a suo figlio di scegliere se fare la doccia subito o dopo la merenda, è una manipolazione, perché lo illudiamo
-di avere una scelta, ma quest'ultima è limitata, infatti, tra le due opzioni, non
-c'è la possibilità di non fare la doccia. Il fine però non è un tornaconto personale del genitore,
-ma siccome spesso, quello che ci sentiamo di fare non è la scelta più giusta, si indirizza il figlio
-all'opzione più salutare, è quest'ultimo infatti a beneficiare della
-manipolazione. Anche gli psicologi possono essere visti come dei manipolatori benevoli, perché tramite il linguaggio cercano di farti
-arrivare ad una soluzione funzionale per il tuo benessere.
+Abbiamo poi il manipolatore benevolo, che agisce per il nostro bene. Ad esempio un genitore che chiede a suo figlio di scegliere se fare la doccia subito o dopo la merenda, è una manipolazione, perché lo illudiamo di avere una scelta, ma quest'ultima è limitata, infatti, tra le due opzioni, non c'è la possibilità di non fare la doccia. Il fine però non è un tornaconto personale del genitore, indirizzando il figlio verso la scelta più sana.
 
-Di seguito alcune tipologie di manipolazione. Lo scopo non è tanto quello di poterle utilizzare a nostro vantaggio, ma
-riuscire a riconoscerle per non cadere vittime di questi stratagemmi comunicativi. Anche, accorgersi se
-inconsapevolmente anche noi le utilizziamo.
+Di seguito alcune tipologie di manipolazione. Lo scopo non è tanto quello di poterle utilizzare a nostro vantaggio, ma riuscire a riconoscerle per non cadere vittime di questi stratagemmi comunicativi, o se involontariamente siamo noi a farle.
 
 \begin{itemize}
 \item Contrattazioni: “Se farai il bravo, avrai una ricompensa”. 
-\item Colpevolizzazioni: “I tuoi brutti voti mi hanno fatto piangere”. 
+\item Colpevolizzazioni: “I tuoi brutti voti mi rattristano”. 
 \item Lusinghe: “Tu sì che sei intelligente, farai Ingegneria!”. 
 \item Ricatti o minacce: “Se non finisci i compiti, niente gelato!”. 
 \item Ingiunzioni paradossali: “Vorrei che tu imparassi a suonare il piano, perché i miei genitori mi hanno negato questa opportunità”. 
-\item Illusioni della libera scelta: “Vuoi andare in vacanza al mare o in montagna?”
-L'interlocutore non può scegliere di non andare in vacanza.
-\item Tecnica della porta in faccia: “Mi presteresti 1000 euro? E 200?” Fare una prima proposta esagerata, che verrà
-rifiutata, in modo che l'interlocutore si sentirà più a disagio a rifiutarvi una seconda volta. La
-vostra prima richiesta, non deve essere il vostro obiettivo finale, ma è la seconda invece ad esserlo.
-\item Tecnica del piede nella porta: “Mi presteresti 50 euro? Potresti darmene altri 150?” fare una piccola richiesta
-che facilmente verrà accettata, per poi successivamente farne una più grande e coerente con la precedente.
+\item Illusioni della libera scelta: “Vuoi andare in vacanza al mare o in montagna?” L'interlocutore non può scegliere di non andare in vacanza.
+\item Tecnica della porta in faccia: “Mi presteresti 1000 euro? E 200?” Fare una prima proposta esagerata, che verrà rifiutata, in modo che l'interlocutore si sentirà più a disagio a rifiutarvi una seconda volta. La vostra seconda richiesta sarà l'obiettivo finale.
+\item Tecnica del piede nella porta: “Mi presteresti 50 euro? Potresti darmene altri 150?” fare una piccola richiesta che facilmente verrà accettata, per poi successivamente farne una più grande e coerente con la precedente.
 \item Contatto fisico e contatto oculare: Imitare il modo di parlare, di muoversi, modi di dire, vocabolario e l'umore del nostro interlocutore.
 \item Tecnica dell'addescamento: si omettono informazioni importanti nella richiesta o addirittura si mente.
-\end{itemize}
-
-Mentre di seguito le manipolazioni inaccettabili:
-
-\begin{itemize}
-\item Menzogna (anche per una buona causa) 
-\item Eccesso di ottimismo senza elementi concreti: “Sei un combattente nato, non puoi che avere successo in questo progetto”. 
+\item Eccesso di ottimismo senza elementi concreti: “Sei un combattente nato, non puoi che avere successo in questo progetto”.
 \item L'interrogatorio e le molestie verbali: “Prendiamoci un pomeriggio per parlarne e ti caverò le parole di bocca; così ti sentirai sollevato”. 
-\item Le diagnosi psicologiche
-\item Consigli non richiesti
 \item Minimizzare: “Ti crei problemi per piccole cose”
-\item Colpevolizzare
-\item Ricatto emotivo: “Mi rattrista vedere che tu…”. 
 \item Appello morale: “Tua sorella resta tua sorella”. 
-\item Giudizi : “Tu non hai orgoglio, manchi di volontà, non hai spina dorsale”. 
+\item Giudizi: “Tu non hai orgoglio, manchi di volontà, non hai spina dorsale”. 
 \item Riesame di un giudizio dato: “Pensavo che tu fossi diverso”. 
-\item Ordini. 
-\item Minacce
+\item Consigli non richiesti.
+\item Diagnosi psicologiche.
+\item Ordini.
 \end{itemize}
-
-Diventa quindi importante chiedersi se la persona che ci sta manipolando, o noi stessi, siamo consapevoli o meno e quali
-sono i bisogni che stiamo tentando di soddisfare.
-Quando dobbiamo compiere una scelta, per ridurre al minimo la possibilità di essere manipolati, possiamo farci
-alcune domande, rispondendo in maniera positiva (evitando i “non”), inserendo più dettagli possibili:
-
-\begin{itemize}
-\item È questo il momento di prendere questa decisione? 
-\item Quale sarebbe l'occasione perfetta?
-\item Serve a me o lo faccio solo per compiacere qualcun altro? 
-\item Che cosa ho da perdere, o da guadagnare? 
-\item Quali sono gli indicatori specifici che mi permettono di essere sicuro della mia scelta? 
-\item Quali sono i passaggi intermedi e le possibili conseguenze? 
-\item Se tale decisione si rivelasse errata, avrò la possibilità di cambiarla? E sarò disposto a farlo?
-\end{itemize}
-
-Come possiamo sapere se la nostra manipolazione è moralmente accettabile? Il cosiddetto ‘test dei tre filtri’ (verità, bontà, utilità), spesso attribuito a Socrate, è in realtà un’invenzione moderna della missionaria Amy Carmichael negli anni ’30–’40, poi diffusa come ‘Socrate’: 
-
-\begin{itemize}
-\item Verità: la nostra manipolazione si fonda su informazioni vere che abbiamo verificato direttamente? Siamo certi che
-il nostro interlocutore agisca contro i propri bisogni o interessi personali? Se l'informazione ci
-è stata riferita da altri, o è un'impressione o una supposizione, rispondiamo no. 
-\item Bontà: Il nostro obiettivo è il benessere del nostro interlocutore? Se anche solo marginalmente, il nostro intento
-riguarda i nostri interessi rispondiamo no. 
-\item Utilità: la manipolazione sarà veramente utile alla persona? O questo cambiamento è solo di ordine estetico o che
-fa comodo a noi? In questo caso, rispondiamo no. 
-\end{itemize}
-
-Quando abbiamo una richiesta, che non viene espressa in modo diretto, ma passa attraverso qualcos'altro potrebbe trattarsi di manipolazione. Forse tutto ciò che esce dalla nostra bocca ha il fine di
-incontrare qualcuno, di sedurre e persuadere qualcuno.
-
-Se qualcuno si sacrifica per te, dev'essere perché desidera farlo davvero, non perché poi può
-manipolarti arrabbiandosi o facendoti sentire in colpa. Un utile domanda potrebbe essere: Se rifiutassi di farlo, la
-mia relazione come cambierebbe? Anche, al contrario: Se l'altra persona si rifiutasse di fare
-quello che voglio, la nostra relazione come cambierebbe?. Se la risposta è che un rifiuto causerebbe rabbia, allora
-potremmo essere nel campo della manipolazione.
 
 Tratto da: Le armi nascoste della manipolazione\endnote{\raggedright\url{https://www.amazon.it/dp/8807892529}}
 
 \begin{mdframed}[linewidth=1pt]
 Come si smaschera una bugia?
 
-Una ricerca dell'università britannica di Portsmouth ha trovato un modo che può aiutare a scoprire chi sta mentendo grazie alla distrazione. 
-I ricercatori hanno suddiviso 164 volontari in tre gruppi per simulare interviste in cui si
-esprimevano opinioni su argomenti neutri, scegliendo di dire la verità o di mentire. Nel primo gruppo, ai partecipanti fu assegnato un compito consistente nel ricordare una targa automobilistica a 7 cifre che era presentata come importante (solo per metà del gruppo). Il secondo gruppo aveva
-un altro incarico, ma indicato come non rilevante, il terzo nessuno. Alla fine dell’esperimento, i bugiardi sottoposti al compito importante furono percepiti dagli intervistatori come meno plausibili e meno chiari. Gli autori concludono che lo sforzo cognitivo richiesto per mentire mentre si svolge un altro compito rende le bugie meno plausibili e meno chiare, facilitando la loro individuazione.
+I ricercatori dell'università di Portsmouth hanno suddiviso 164 volontari in tre gruppi per simulare interviste in cui si esprimevano opinioni su argomenti neutri, scegliendo di dire la verità o di mentire. Nel primo gruppo, ai partecipanti fu assegnato il compito importante di ricordare una targa automobilistica a 7 cifre. Il secondo gruppo aveva un altro incarico, indicato come non rilevante e, il terzo nessuno. Alla fine dell’esperimento, i bugiardi sottoposti al compito importante furono percepiti dagli intervistatori come meno plausibili e meno chiari. Gli autori concludono che lo sforzo cognitivo richiesto per mentire, mentre si svolge un altro compito, rende le bugie meno plausibili e meno chiare, facilitando la loro individuazione.
 \end{mdframed}
 
 \subsubsection{Cambiare idea al pubblico}
-Continuiamo con alcune strategie usate da persone abituate a parlare in pubblico ad esempio nei dibattiti televisivi,
-non tanto per utilizzarle a nostra volta, ma piuttosto per riconoscerle e non esserne vittime. Alcuni dei seguenti
-punti sono contraddittori con quanto detto precedentemente. Queste strategie sono pensate per il dibattito pubblico,
-quindi lo scopo non è necessariamente cambiare idea al proprio interlocutore, ma alle persone che assistono. 
+Continuiamo con alcune strategie usate da persone abituate a parlare in pubblico ad esempio nei dibattiti televisivi, anche qua, non per utilizzarle a nostra volta, ma per riconoscerle. Alcuni dei seguenti punti sono contraddittori con quanto detto precedentemente. Queste strategie sono pensate per il dibattito pubblico e, lo scopo non è necessariamente far cambiare idea al proprio interlocutore, ma alle persone che assistono. 
 
-Molti di questi trucchi sono un po' “sporchi”, però è importante conoscerli per poterlo far notare, nel
-caso in cui ci trovassimo sotto attacco, ma anche solo per guardare i talk show in altro modo\endnote{\raggedright\url{https://www.focus.it/comportamento/psicologia/trappole-della-logica}}.
+Molti di questi trucchi sono un po' “sporchi”, ma riconoscendoli, potremmo farli notare, nel caso in cui ci veissero usate su di noi, ma anche solo per guardare i talk show in modo diverso\endnote{\raggedright\url{https://www.focus.it/comportamento/psicologia/trappole-della-logica}}.
 
 \begin{itemize}
 \item Falsa causa: Supporre che, se due eventi si verificano insieme o in successione, uno debba necessariamente essere la causa dell’altro.
@@ -3563,45 +3473,6 @@ caso in cui ci trovassimo sotto attacco, ma anche solo per guardare i talk show 
 \item Straw man (Uomo di paglia): Distorcere le posizioni dell’avversario, esagerandole o semplificandole, per renderle più facili da attaccare.
 \item Falsa equidistanza: Assumere che la verità si trovi sempre nel compromesso tra due posizioni opposte, quando in realtà potrebbe essere solo da una parte.
 \end{itemize}
-
-A tutte queste strategie si può rispondere chiedendo i dati, le fonti, ricordando che uno scienziato da solo, anche se è un premio nobel, non fa la Scienza. A chi dovesse minimizzare il valore dei dati, spiegate perché il metodo scientifico è così fondamentale. Fate costante attenzione a quando il discorso vira in un'altra direzione, facendolo notare e riportandolo dov'era.
-
-\begin{mdframed}[linewidth=1pt]
-Studio sull'obbedienza di Milgram
-
-Nel 1961 Stanley Milgram della Yale University studia l'obbedienza. Milgram si chiedeva come regimi autoritari, come quello nazista, avessero potuto spingere persone comuni a obbedire ordini disumani.
-L'obbedienza può portare una persona a comportarsi contro la sua etica e la sua morale.
-
-Charles Percy Snow nel 1961 scrive: Quando pensi alla lunga e cupa storia dell'uomo, scopri che
-sono stati commessi crimini terribili in nome dell'obbedienza, in misura maggiore di quanti ne
-siano stati commessi in nome della ribellione.
-
-Milgram crea un esperimento per provare la sua teorica. Crea una finta sedia elettrica con voltaggi che vanno da 15 a 450
-volt. La persona che andrà su questa sedia è un collaboratore dello studioso. A seconda delle risposte Milgram ordinerà
-di dare la scossa e il voltaggio dovrà aumentare di volta in volta fino ad arrivare a livelli indicati sull'apparecchio
-come "altamente pericolosi". Se un soggetto arriva a disobbedire l'esperimento termina.
-
-Vengono chiamati a partecipare all'esperimento 40 uomini, dai 20 ai 50 anni, convinti di partecipare a uno studio sulla
-relazione tra punizione e apprendimento. Ci sarà un "insegnante" e uno
-"studente", la scelta di questi ruoli verrà detto loro che sarà casuale, in realtà il
-collaboratore sarà sempre lo studente sulla finta sedia elettrica e il soggetto dell'esperimento l'insegnante.
-
-Ai partecipanti viene fatta provare una carica da 45 volt per avere un paragone sulle scosse che indurranno. Ogni volta
-aumenterà il voltaggio e al raggiungimento dei 300 volt si sentirà un colpo provenire dalla stanza dove si trova lo
-studente. Da questo momento in poi, la vittima non fornirà più alcuna risposta alle domande.
-
-Ogni volta che il partecipante avrà dei dubbi sul dare la scossa o meno, Milgram risponderà: Per favore, vada avanti.
-L'esperimento richiede che lei vada avanti. È assolutamente necessario che lei proceda. Non ha
-scelte, deve andare avanti.
-
-A fine esperimento sono stati intervistati i soggetti che confermarono di essere consapevoli del dolore che stavano
-infliggendo. 
-
-I risultati sono stati: Tutti i partecipanti arrivarono ad almeno 300V, e circa 26 su 40 (65\%) somministrarono la scarica massima di 450V.
-
-Nel 2012, Haslam e Reicher reinterpretano gli studi tramite il concetto di ‘engaged followership’: mostrano che le persone obbediscono non per ignoranza, ma quando si identificano con l’autorità\endnote{\raggedright\url{https://www.youtube.com/watch?v=VoGMMMkv6lQ}}
-\endnote{\raggedright\url{https://www.stateofmind.it/2016/04/esperimento-obbedienza-milgram}}. 
-\end{mdframed}
 
 \clearpage\section{Amore}
 \subsubsection{Il problema della definizione}
