--- a/Libro.tex
+++ b/Libro.tex
@@ -3478,84 +3478,36 @@ Molti di questi trucchi sono un po' “sporchi”, ma riconoscendoli, potremmo f
 \subsubsection{Il problema della definizione}
 La definizione di parole come 'felicità' e 'amore' si è evoluta nel tempo, assumendo significati diversi in contesti culturali e storici differenti. Questa evoluzione può generare aspettative poco realistiche e, talvolta, frustrazione.
 
-Spesso confondiamo l'amore con l'infatuazione. Le sensazioni che proviamo nelle fasi iniziali di una relazione, spesso le chiamiamo amore mentre invece è un innamoramento o fase luna di miele. Questa fase iniziale, caratterizzata da forte attrazione e idealizzazione del partner, tende fisiologicamente ad attenuarsi nel tempo, in media tra i 6 mesi e i 2 anni, a causa di cambiamenti neurochimici. Quando finisce la passione, il desiderio, siamo meno gelosi, non sentiamo
-l'esigenza di passare tutto il nostro tempo libero con l'altro/a, potremmo provare persino
-noia e pensiamo che sia finito l'amore. Così, molte persone in amore si sentono
-in colpa perché non provano ciò che dovrebbero/vorrebbero provare, o ancora, perché dopo 3 o 4 anni non si fa più sesso come all'inizio; mentre invece è comune e normale.
+Spesso confondiamo l'amore con l'infatuazione. Le sensazioni che proviamo nelle fasi iniziali di una relazione, spesso le chiamiamo amore mentre invece è un innamoramento o fase luna di miele. Questa fase iniziale, caratterizzata da forte attrazione e idealizzazione del partner, tende fisiologicamente ad attenuarsi nel tempo, in media tra i 6 mesi e i 2 anni. Quando finisce la passione, il desiderio, l'esigenza di passare tutto il nostro tempo l'altro potremmo pensare che sia finito l'amore. Così, molte persone si sentono in colpa perché non provano ciò che dovrebbero/vorrebbero provare, o ancora, perché dopo 3 o 4 anni non si fa più sesso come all'inizio; mentre invece è comune e normale.
 
-Nela fase luna di miele tutto sembra perfetto. Questo meccanismo può essere interpretato come un adattamento evolutivo che favorisce le probabilità di accoppiamento, in quanto non vedremo motivi per non farlo. Dopo l'infatuazione iniziale, dove il partner ci crede perfetti, presto o tardi potremmo talvota essere deludenti verso di lui o lei, quando inizieranno ad emerge i difetti che tutte le persone hanno. Quando
-i nostri difetti iniziano ad essere noti, nel caso in cui vengano anche accettati, possiamo assistere a una fase
-importante, ovvero quella dove passiamo dall'innamoramento all'amore, dove lo
-stare con l'altro diventa uno scegliersi quotidianamente. 
+Nela fase luna di miele tutto sembra perfetto. Questo meccanismo può essere interpretato come un adattamento evolutivo che favorisce le probabilità di accoppiamento, in quanto, non vediamo i difetti del partner. Finita questa fase, emergeranno i difetti e, nel caso in cui vengano anche accettati, passiamo dall'innamoramento all'amore, dove lo stare con l'altro diventa uno scegliersi quotidianamente.
 
-In alcune dinamiche relazionali, può accadere che si cerchi inconsciamente di modificare l'altro quando si percepisce un conflitto tra desideri emotivi e criteri razionali nella scelta del partner. Anche quando decidiamo di dare retta alla testa, spesso facciamo
-l'errore di scegliere il partner in base agli interessi comuni invece che ai valori comuni. 
-Come dice il proverbio: Chi si somiglia si piglia, in contrapposizione con "gli opposti si attraggono", ora uno studio ha osservato non essere solo un proverbio\endnote{\raggedright\url{https://www.sciencedirect.com/science/article/abs/pii/S109051382300051X}} \endnote{\raggedright\url{https://www.theguardian.com/science/2023/sep/04/opposites-dont-attract-couples-more-likely-to-be-similar-than-different-study-shows}}. 
-Ne Il segreto dell'amore felice\endnote{\raggedright\url{https://www.amazon.it/dp/B00GH162G2}}, ci sono molti esempi dove
-accade questa cosa. Ad esempio, una ragazza potrebbe lamentare di trovare sempre e solo ragazzi che vogliono un
-avventura, mentre lei vorrebbe costruire una relazione duratura. Il terapeuta in questi casi può portare la paziente ad
-interrogare sé stessa del fatto che forse, lei trova persone che vogliono solo un'avventura, forse perché è lei stessa a
-volerla e, così, la sofferenza nascerebbe dal fatto che, forse per la famiglia, forse per la cultura
-popolare, forse per un ideale di romanticismo o di come dovrebbero andare le cose, lei ha dato un significato negativo a questa sua tendenza che ha portato a questa conflittualità.
-
-Possiamo fingere per noi stessi, o anche per risultare più attraenti per l'altro, sul web è pieno
-di corsi che promettono di farti conquistare qualsiasi persona e, sul breve periodo potrebbe anche funzionare, ma
-fingere a lungo risulta impossibile, presto o tardi, con il tempo. tenderanno a emergere aspetti più autentici della propria personalità, rendendo difficile mantenere comportamenti artefatti.
+Sul web è pieno di corsi che promettono di farti conquistare qualsiasi persona e, sul breve periodo, potrebbero anche funzionare, ma fingere a lungo risulta impossibile, presto o tardi, con il tempo, tenderanno a emergere gli aspetti della propria personalità, rendendo difficile mantenere comportamenti artefatti.
 
 \begin{mdframed}[linewidth=1pt]
 Le dating app funzionano?
 
-Secondo BBC Science\endnote{BCC Science (2014). The Science of Flirting
-\raggedright\url{https://www.bbc.co.uk/science/hottopics/love/flirting.shtml} }, l'incontro face to face offre
-diverse informazioni. Ci occorre un tempo che va dai 90 secondi ai 4 minuti per stabilire se una persona ci piace e,
-valutando con meno importanza i contenuti del dialogo.
+Secondo uno studio dell'Università scientifica della Norvegia pubblicato su Personality and Individual Differences, lo psicologo Leif Edward Ottesen Kennair intervistando 641 studenti tra i 19 e i 29 anni ha riscontrato che 1 su 5 usava Tinder o altre app d'incontri. Da questi sondaggi è emerso che chi cercava partner tramite il digitale non aveva più partner sessuali rispetto a chi utilizzava strategie tradizionali. 
 
-Secondo uno studio dell'Università scientifica della Norvegia pubblicato su Personality and Individual Differences, lo
-psicologo Leif Edward Ottesen Kennair intervistando 641 studenti tra i 19 e i 29 anni ha riscontrato che 1 su 5 usava
-Tinder o altre app d'incontri. Da questi sondaggi è emerso che chi cercava partner tramite il digitale non aveva più
-partner sessuali rispetto a chi utilizzava strategie tradizionali. "lo studio ha osservato che alcune donne dichiaravano di essere più interessate alla conferma del proprio potere seduttivo piuttosto che alla ricerca di un partner occasionale, ma si tratta di una tendenza non generalizzabile.
+La dating app sono un campo ancora nuovo e non si conoscono tutti i risvolti positivi e negativi, come il paradosso della scelta. Secondo gli psicologi dell'università olandese di Tilburg (Finkel et al., 2012; D’Angelo \& Toma, 2017), avendo così tanta disponibilità, il dubbio di aver fatto la scelta giusta o che, se avessimo continuato a cercare, avremmo potuto trovare di meglio, potrebbe rappresentare una criticità. Come per la domanda e l'offerta, avendo tanta offerta, questo “bene” perde di valore. Quando ci troveremo a gestire un attrito con il nostro partner, l'impegno a sistemare le cose potrebbe risultare minore, perché abbiamo l'impressione di poter trovarne un altro velocemente.
 
-La dating app sono un campo ancora nuovo e non si conoscono tutti i risvolti positivi e negativi. Tra i vari lati
-problematici troviamo il paradosso della scelta. Avendo così tanta disponibilità nella scelta di un potenziale partner
-il dubbio di aver fatto la scelta giusta o che, se avessimo continuato a cercare, avremmo potuto trovare di meglio,
-potrebbe rappresentare una criticità. Inoltre, queste app semplificano l'accesso a molti partner,
-sia perché non dobbiamo aspettare il sabato sera, ma possiamo farlo in qualsiasi momento, sia per
-l'ampia scelta che mette a disposizione, rendendo così disponibile questa risorsa, similmente alla
-legge della domanda e dell'offerta, questo “bene” perde di valore. Così, quando ci troveremo a
-gestire un attrito con il nostro partner, l'impegno a sistemare le cose potrebbe risultare minore,
-perché abbiamo l'impressione di poter trovare un altro partner velocemente.
-
-Ad oggi la maggioranza delle relazioni nascono dagli amici in comune, nel 42.8\% dei casi per la Generazione Z e nel
-41.6\% per i Millennials, seguito dal posto di lavoro 11,9\%, scuola o università 10.4\%. Le relazioni che nascono
-online sono più difficili da stimare, secondo qualche ricerca online sembrano andare dal 30 al 40\%.
-
-Appuntamenti online
-
-Anche questa è un opzione percorribile e valida oggi giorno, ma con moderazione. Secondo gli psicologi dell'università
-olandese di Tilburg, la  tendenza a guardare tanti profili, può contribuire a un senso di insoddisfazione e indecisione, rendendo più difficile costruire connessioni significative (Finkel et al., 2012; D’Angelo \& Toma, 2017). Questo dipende dall'enorme mole di opzioni disponibili, che possono accrescere i sentimenti di insoddisfazione e pessimismo nella ricerca di un partner. Più tempo si passava a guardare profili e più cresceva il
-pessimismo sull'essere accettati loro stessi, che a sua volta era collegato alla tendenza al rifiuto.
+Ad oggi la maggioranza delle relazioni nascono dagli amici in comune, nel 42.8\% dei casi per la Generazione Z e nel 41.6\% per i Millennials, seguito dal posto di lavoro 11,9\%, scuola o università 10.4\%. Le relazioni che nascono online sono più difficili da stimare, secondo qualche ricerca online sembrano andare dal 30 al 40\%.
 \end{mdframed}
 
 \begin{mdframed}[linewidth=1pt]
 Come capire se piaci a qualcuno?
 
-Esistono diversi segnali che possono suggerire se una persona prova un interesse nei tuoi confronti, anche se nessuno di essi costituisce una prova assoluta. Uno dei modi più semplici per testare il livello di gradimento che qualcuno ha nei tuoi confronti è osservare le sue reazioni a un complimento. Ad esempio, se dici a una persona: "Ti sta molto bene questa maglietta", presta attenzione a vedere se nei giorni o nelle settimane seguenti la indossa con maggiore frequenza. Questo potrebbe indicare che il tuo apprezzamento ha avuto un impatto positivo su di lei, portandola inconsciamente a voler rafforzare quella percezione positiva ai tuoi occhi.
+Esistono diversi segnali che possono suggerire se una persona prova un interesse nei tuoi confronti, anche se nessuno di essi costituisce una prova assoluta. Possiamo osservare le reazioni a un complimento. Ad esempio, se dici a una persona: "Ti sta molto bene questa maglietta" note se nei giorni seguenti la indossa con maggiore frequenza.
+Al primo appuntamento, un'attività emozionante, potrebbe, essere attribuita, alla vostra presenza, intensificando la percezione di interesse.
 
-Sfrutta le sue reazioni fisiologiche: Se volete creare una connessione emotiva al primo appuntamento, potreste considerare un'attività che generi eccitazione, come un film horror. L'attivazione fisiologica indotta dal film (battito cardiaco accelerato, ecc.) potrebbe, in alcuni casi, essere erroneamente attribuita, alla vostra presenza, intensificando la percezione di interesse. Questo fenomeno si chiama
-attribuzione erronea dell'arousal, una teoria secondo cui spesso sbagliamo a individuare la provenienza della
-sensazione di attivazione percepita dal nostro corpo: il battito cardiaco accelerato e le mani sudate dei momenti di
-stress sono gli stessi dell'eccitazione positiva\endnote{\raggedright\url{http://psycnet.apa.org/record/1982-05734-001}}.
+Questo fenomeno si chiama attribuzione erronea dell'arousal, una teoria secondo cui spesso sbagliamo a individuare la provenienza della sensazione di attivazione percepita dal nostro corpo: il battito cardiaco accelerato e le mani sudate dei momenti di stress sono gli stessi dell'eccitazione positiva\endnote{\raggedright\url{http://psycnet.apa.org/record/1982-05734-001}}.
 
-Se sentiamo una sensazione allo stomaco,
-potrebbe essere fame, ulcera, ansia, un trauma, nostalgia, amore o mille altre cose. Ad esempio eccitazione e ansia
-possono avere sensazioni corporee molto simili. Allo stesso modo quando ci innamoriamo
-potremmo provare angoscia e il malessere nel non conoscere i desideri dell'altra persona nei nostri confronti. 
-Così, in quel momento noi potremmo scambiare queste sensazioni e credere che se proviamo angoscia, potrebbe non essere la persona giusta per noi. 
-
-Un altro possibile segnale di interesse si manifesta nel linguaggio del corpo. Se qualcuno è attratto da te, potrebbe spontaneamente assumere una postura frontale quando vi parlate, orientando il proprio corpo direttamente verso di te invece di tenersi di lato o distanziarsi. Inoltre, una persona interessata potrebbe cercare di ridurre lo spazio fisico tra voi, avvicinandosi più spesso o trovando pretesti per un contatto fisico leggero, come sfiorarti il braccio o toccarti con una scusa apparentemente casuale.
-
-Tuttavia, è fondamentale ricordare che nessuno di questi segnali è una garanzia certa di interesse romantico o attrazione sessuale. Le persone possono avvicinarsi, allontanarsi o modificare il proprio comportamento per una moltitudine di motivi che potrebbero non avere nulla a che fare con i loro sentimenti nei tuoi confronti. Il contesto, la personalità individuale e la situazione specifica giocano un ruolo cruciale nell’interpretazione di questi segnali.
+Chi si somiglia si piglia o gli opposti si attraggono? Secondo alcuni studi sembra che chi si somiglia si piglia\endnote{\raggedright\url{https://www.sciencedirect.com/science/article/abs/pii/S109051382300051X}} \endnote{\raggedright\url{https://www.theguardian.com/science/2023/sep/04/opposites-dont-attract-couples-more-likely-to-be-similar-than-different-study-shows}}.
 \end{mdframed}
+
+
+
+
 
 Sebbene oggi l’anello di fidanzamento sia considerato un gesto quasi obbligatorio, la sua diffusione capillare è in gran parte dovuta a campagne pubblicitarie sviluppate nel corso del Novecento, in particolare a partire dagli anni ’30. Il
 cinema, la musica e i media, in pochi decenni, sono riusciti a costruire tutta una serie di significati e di norme che
